src/main/java/com/example/cotacao/errors/QuoteNotFoundError.java
package com.example.cotacao.errors;

public class QuoteNotFoundError extends BusinessError {

    public QuoteNotFoundError() {
        super("Cotação não encontrada.");
    }
    
}
